reptyr (0.6.2-1) UNRELEASED; urgency=low

  * New release
  * Bump standards version to 3.9.6 (no changes).

 -- Evan Broder <evan@ebroder.net>  Sun, 08 Feb 2015 14:01:51 -1000

reptyr (0.5-1) unstable; urgency=low

  * New release (Closes: #711020):
    - Drop debian/patches/accept-cmd-line-build-flags.patch which was
      accepted upstream
    - Update debian/reptyr.docs
  * Update debian/README.source to be more clear about willingness to
    support NMUs
  * Update to standards version 3.9.4:
    - Update debian/copyright to the release 1.0 copyright-format spec
    - Update Vcs-Git to match new policy

 -- Evan Broder <evan@ebroder.net>  Wed, 05 Jun 2013 16:20:50 -0700

reptyr (0.3-2) unstable; urgency=low

  * Bump standards version to 3.9.2 (no changes).
  * Build for armhf (Closes: #633750)
  * Enable support for buildflags

 -- Evan Broder <evan@ebroder.net>  Mon, 31 Oct 2011 12:05:33 -0400

reptyr (0.3-1) unstable; urgency=low

  * Initial release (Closes: #613123)

 -- Evan Broder <evan@ebroder.net>  Sun, 10 Jul 2011 08:28:45 -0700